# schools

./: .gitignore  pyproject.toml
.github/workflows/: tests.yaml
docs/: first.md
notebooks/: README.md  added_table.ipynb  data.ipynb  direct_download.ipynb  performance_2023.ipynb  performance_table.ipynb
